--- a/app/src/main/res/layout/activity_take_picture.xml
+++ b/app/src/main/res/layout/activity_take_picture.xml
@@ -23,8 +23,9 @@
         android:layout_centerInParent="true" android:layout_gravity="center"
         android:padding="10dp" android:background="@drawable/surface_image_background">
     </LinearLayout>
+
     <LinearLayout android:id="@+id/linearLayout1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_gravity="bottom" android:gravity="center_horizontal" >
-        <Button android:text="Tirar foto" android:id="@+id/button1"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@drawable/btn_take_pic"></Button>
-        <Button android:text="Usar essa foto" android:id="@+id/button2"  android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
+        <Button android:text="" android:id="@+id/button1"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@drawable/btn_take_pic" android:gravity="center_vertical" />
+        <Button android:text="Usar essa foto" android:id="@+id/button2"  android:layout_width="wrap_content" android:layout_height="wrap_content"  android:gravity="right" android:layout_gravity="right" android:visibility="visible"/>
     </LinearLayout>
 </FrameLayout>
