--- a/app/src/main/res/layout-sw600dp/activity_play.xml
+++ b/app/src/main/res/layout-sw600dp/activity_play.xml
@@ -10,12 +10,12 @@
 
    <RelativeLayout
        android:layout_width="wrap_content"
-       android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_marginTop="20dp"
-       android:layout_marginRight="20dp"
+       android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_marginTop="20dp"
+       android:layout_marginLeft="20dp"
        android:id="@+id/absoluteLayout">
 
        <Button
-           android:layout_width="wrap_content" android:gravity="right" android:textColor="#ffe3cc55" android:id="@+id/back_button"
+           android:layout_width="wrap_content" android:gravity="left" android:textColor="#ffe3cc55" android:id="@+id/back_button"
            android:layout_height="wrap_content" android:text="Voltar" android:background="#ff77c9ff"
            />
 
@@ -26,13 +26,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="10dp" android:layout_alignParentRight="true"
         android:id="@+id/seekBarLayout">
 
         <!---->
         <SeekBar
             android:layout_width="300dp"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:id="@+id/seekBar"
 
             android:progress="5"
