--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -1,16 +1,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:layout_height="match_parent"
     style="@style/mainMenu"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"  >
+     tools:context=".MainActivity"  >
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/cogg_logo"
 
         android:layout_centerHorizontal="true" />
@@ -19,7 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:padding="10dp"
-
+        android:layout_below="@+id/imageView"
         android:background="@drawable/menu_wrapper_layout"
         android:id="@+id/linearLayout2"
         android:layout_width="wrap_content">
