--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,63 +1,62 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:layout_height="match_parent"
     style="@style/mainMenu"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"  >
+     tools:context=".MainActivity"  >
 
-    <LinearLayout
-        android:orientation="vertical"
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/imageView"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/cogg_logo"
+
+        android:layout_centerHorizontal="true" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:padding="10dp"
+
+        android:layout_below="@+id/imageView"
         android:background="@drawable/menu_wrapper_layout"
-        android:id="@+id/linearLayout2">
+        android:id="@+id/linearLayout2"
+        android:layout_width="wrap_content">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/imageView"
-            android:background="@drawable/cogg_logo"
-
-            android:layout_centerHorizontal="true" />
 
 
         <Button
 
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:layout_margin="4dp"
-        android:text="Começar"
-        android:id="@+id/buttonInit"
-
-        style="@style/ButtonText"
-        android:background="@drawable/btn_layout"
-        />
-
-    <Button
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:layout_margin="4dp"
-            android:text="Tirar foto"
+
+            android:layout_marginBottom="4dp"
+
+            android:id="@+id/buttonInit"
+
+            android:background="@drawable/buttons_09"
+            />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_marginBottom="4dp"
+
             android:id="@+id/btnNewPic"
-            style="@style/ButtonText"
-            android:background="@drawable/btn_layout"
+
+            android:background="@drawable/buttons_17"
             />
 
         <Button
 
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:layout_margin="4dp"
-            android:text="Escolher Foto"
+
+            android:layout_marginBottom="4dp"
+
             android:id="@+id/btnChoosePic"
-            style="@style/ButtonText"
-            android:background="@drawable/btn_layout"
+
+            android:background="@drawable/buttons_14"
             />
 
     </LinearLayout>
