--- a/app/src/main/res/layout/activity_take_picture.xml
+++ b/app/src/main/res/layout/activity_take_picture.xml
@@ -18,8 +18,8 @@
 
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="400dp"
-        android:layout_height="500dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerInParent="true" android:layout_gravity="center"
         android:padding="10dp" android:background="@drawable/surface_image_background">
     </LinearLayout>
