--- a/app/src/main/res/layout-sw480dp/grid_item_layout.xml
+++ b/app/src/main/res/layout-sw480dp/grid_item_layout.xml
@@ -9,15 +9,16 @@
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="100dp"
-        android:layout_height="100dp" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
-    <TextView
+    <br.com.lucasaquiles.cogg.view.CustomTextView
         android:id="@+id/text"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:gravity="center"
+        android:tag="fonts/CHERL.tff"
         android:textSize="12sp" />
 
 </LinearLayout>
