--- a/app/src/main/res/layout-sw600dp/grid_item_layout.xml
+++ b/app/src/main/res/layout-sw600dp/grid_item_layout.xml
@@ -5,19 +5,23 @@
     android:layout_marginTop="5dp" android:layout_marginLeft="5dp" android:layout_marginRight="5dp"
     android:background="#ffffff"
     android:orientation="vertical"
-    android:padding="5dp">
+    android:padding="10dp">
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="280dp"
-        android:layout_height="280dp" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
-    <TextView
+    <br.com.lucasaquiles.cogg.view.CustomTextView
         android:id="@+id/text"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:gravity="center"
-        android:textSize="12sp" />
+
+        android:text="jakslf;jaksfjads"
+        android:textColor="#000"
+
+        android:textSize="30sp" />
 
 </LinearLayout>
