--- a/app/src/main/res/layout/activity_select_image.xml
+++ b/app/src/main/res/layout/activity_select_image.xml
@@ -16,7 +16,7 @@
 
     <GridView
         android:id="@+id/gridView"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:columnWidth="150dp"
