--- a/app/src/main/res/drawable/btn_layout.xml
+++ b/app/src/main/res/drawable/btn_layout.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<selector xmlns:android="http://schemas.android.com/apk/res/android" >
+
     <item android:state_pressed="true" >
+
         <shape>
             <solid
                 android:color="#95c7d6" />
             <stroke
                 android:width="1dp"
-                android:color="#74bfe1" />
+                android:color="#4b82c1" />
             <corners
                 android:radius="1dp" />
 
@@ -17,11 +19,12 @@
             <gradient
                 android:startColor="#95c7d6"
                 android:endColor="#74bfe1"
-                android:angle="270" />
+                android:angle="270"  />
             <stroke
-                android:width="1dp"
-                android:color="#74bfe1" />
+                android:width="2dp"
+                android:color="#54b0da" />
             <corners
+
                 android:radius="1dp" />
 
         </shape>
