--- a/app/src/main/res/layout/activity_select_image.xml
+++ b/app/src/main/res/layout/activity_select_image.xml
@@ -44,10 +44,12 @@
         android:layout_margin="5dp"
 
         android:drawSelectorOnTop="true"
+
         android:gravity="center"
-        android:numColumns="auto_fit"
+        android:numColumns="3"
         android:stretchMode="columnWidth"
-        android:verticalSpacing="5dp"
+        android:verticalSpacing="20dp"
+        android:horizontalSpacing="20dp"
         android:focusable="true"
         android:clickable="true"/>
 </RelativeLayout>
