correcao da duplicidade de imagem ao salvar uma colagem e acao do botao de voltar ao concluir uma montagem

--- a/app/src/main/res/layout/activity_finish.xml
+++ b/app/src/main/res/layout/activity_finish.xml
@@ -13,7 +13,7 @@
     tools:context="br.com.lucasaquiles.cogg.FinishActivity">
 
 <br.com.lucasaquiles.cogg.view.CustomButtton
-    android:layout_width="wrap_content"
+    android:layout_width="wrap_content" android:id="@id/back_button"
     android:layout_height="wrap_content" android:text="voltar"
     android:padding="10dp" android:background="@drawable/btn_layout" />
     <RelativeLayout
