--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -13,27 +13,105 @@
     tools:context="br.com.lucasaquiles.cogg.view.DetailActivity">
 
 
+
+    <TextView
+        android:layout_width="wrap_content" android:layout_centerHorizontal="true"
+        android:layout_height="wrap_content" android:text="Imagem criada" android:textSize="30sp"
+        android:id="@+id/lab1" android:layout_marginBottom="20dp" android:layout_marginTop="20dp"
+        android:textColor="#000"/>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/_head_2_ic"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/lab1"
+        android:id="@+id/image" />
+
+
+    <TextView
+        android:layout_width="wrap_content" android:layout_centerHorizontal="true"
+        android:layout_height="wrap_content" android:text="Imagem de refência" android:textSize="30sp"
+        android:id="@+id/lab2" android:layout_below="@+id/image" android:layout_marginBottom="20dp" android:layout_marginTop="20dp"
+        android:textColor="#000"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Percentual de diferença"
+        android:textColor="#111"
+        android:textSize="25sp"
+
+        android:textAlignment="center"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/lab2"
+        android:layout_marginTop="10dp"
+        android:id="@+id/titulo"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Percentual de diferença"
+        android:textColor="#111"
+        android:textSize="25sp"
+
+        android:textAlignment="center"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/titulo"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:id="@+id/emocao"
+        />
+
+
+
+    <br.com.lucasaquiles.cogg.view.RoundedImageView
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:src="@drawable/_head_2_ic"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="30dp"
+        android:layout_below="@+id/emocao"
+        android:id="@+id/imageBase" />
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/_head_2_ic"
+
+        android:layout_below="@+id/emocao" android:layout_toRightOf="@id/imageBase"
+
+        android:id="@+id/avatarBase" />
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Percentual de diferença"
+        android:textColor="#111"
+        android:textSize="25sp"
+
+        android:textAlignment="center"
         android:layout_centerHorizontal="true"
-
-        android:id="@+id/image" />
-
-
+        android:layout_below="@+id/imageBase"
+        android:layout_marginTop="10dp"
+        android:id="@+id/labPercentual"
+        />
 
     <br.com.lucasaquiles.cogg.view.CustomTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Parabééééns!!!!"
+        android:text="0%"
         android:textColor="#111"
         android:textSize="30sp"
         android:textAlignment="center"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/image"
+        android:layout_below="@+id/labPercentual"
         android:layout_marginTop="10dp"
         android:id="@+id/flag"
         />
+
+
 
 </RelativeLayout>
