--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,9 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+
+<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/scrollView"
+    android:layout_width="fill_parent"
+
+    android:layout_height="wrap_content"
+
+    >
+
+<RelativeLayout
     android:id="@+id/activity_detail"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -16,7 +28,7 @@
 
     <TextView
         android:layout_width="wrap_content" android:layout_centerHorizontal="true"
-        android:layout_height="wrap_content" android:text="Imagem criada" android:textSize="30sp"
+        android:layout_height="wrap_content" android:text="Imagem criada" android:textSize="26sp"
         android:id="@+id/lab1" android:layout_marginBottom="20dp" android:layout_marginTop="20dp"
         android:textColor="#000"/>
 
@@ -29,22 +41,34 @@
         android:id="@+id/image" />
 
 
-    <TextView
-        android:layout_width="wrap_content" android:layout_centerHorizontal="true"
-        android:layout_height="wrap_content" android:text="Imagem de refência" android:textSize="30sp"
-        android:id="@+id/lab2" android:layout_below="@+id/image" android:layout_marginBottom="20dp" android:layout_marginTop="20dp"
-        android:textColor="#000"/>
+
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Percentual de diferença"
+        android:text="Nome: "
+        android:textColor="#111"
+        android:textSize="25sp"
+        android:textStyle="bold"
+
+        android:textAlignment="center"
+        android:layout_toLeftOf="@id/title"
+        android:layout_below="@+id/image"
+        android:layout_marginTop="10dp"
+        android:id="@+id/lablTitulo"
+        android:layout_marginRight="20dp"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="nome da imagem"
         android:textColor="#111"
         android:textSize="25sp"
 
-        android:textAlignment="center"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/lab2"
+        android:layout_alignRight="@+id/lablTitulo"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/image"
         android:layout_marginTop="10dp"
         android:id="@+id/titulo"
         />
@@ -52,12 +76,29 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Percentual de diferença"
+        android:text="Expressão: "
         android:textColor="#111"
         android:textSize="25sp"
+        android:layout_toLeftOf="@+id/emocao"
+        android:layout_marginRight="10dp"
+        android:layout_alignParentLeft="true"
+        android:textStyle="bold"
+        android:layout_below="@+id/titulo"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:id="@+id/labEmocao"
+        />
 
-        android:textAlignment="center"
-        android:layout_centerHorizontal="true"
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Nome da expressao"
+        android:textColor="#111"
+        android:textSize="25sp"
+        android:layout_alignRight="@+id/lablTitulo"
+        android:layout_alignParentRight="true"
+
         android:layout_below="@+id/titulo"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
@@ -66,36 +107,17 @@
 
 
 
-    <br.com.lucasaquiles.cogg.view.RoundedImageView
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        android:src="@drawable/_head_2_ic"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="30dp"
-        android:layout_below="@+id/emocao"
-        android:id="@+id/imageBase" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/_head_2_ic"
-
-        android:layout_below="@+id/emocao" android:layout_toRightOf="@id/imageBase"
-
-        android:id="@+id/avatarBase" />
-
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Percentual de diferença"
+        android:text="(%) diferença"
         android:textColor="#111"
         android:textSize="25sp"
+        android:textStyle="bold"
 
-        android:textAlignment="center"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/imageBase"
-        android:layout_marginTop="10dp"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/labEmocao"
+
         android:id="@+id/labPercentual"
         />
 
@@ -104,14 +126,49 @@
         android:layout_height="wrap_content"
         android:text="0%"
         android:textColor="#111"
-        android:textSize="30sp"
-        android:textAlignment="center"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/labPercentual"
-        android:layout_marginTop="10dp"
+        android:textSize="25sp"
+        android:layout_alignRight="@+id/labPercentual"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/labEmocao"
+
         android:id="@+id/flag"
         />
 
 
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"   android:layout_below="@+id/labPercentual">
+
+        <TextView
+            android:layout_width="wrap_content" android:layout_centerHorizontal="true"
+            android:layout_height="wrap_content" android:text="Imagens de referência" android:textSize="26sp"
+            android:id="@+id/lab2" android:layout_marginBottom="20dp" android:layout_marginTop="20dp"
+            android:textColor="#000"/>
+
+        <br.com.lucasaquiles.cogg.view.RoundedImageView
+            android:layout_width="180dp"
+            android:layout_height="180dp"
+            android:src="@drawable/_head_2_ic"
+
+            android:layout_below="@id/lab2"
+            android:layout_marginTop="20dp"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/imageBase" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/_head_2_ic"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/imageBase"
+            android:layout_marginTop="10dp"
+            android:id="@+id/avatarBase" />
+
+
+    </RelativeLayout>
+
+
+
 </RelativeLayout>
+</ScrollView>
