--- a/app/src/main/res/layout-sw480dp/activity_play.xml
+++ b/app/src/main/res/layout-sw480dp/activity_play.xml
@@ -130,10 +130,11 @@
                         android:src="@drawable/nose_1_ic_opened"
                         android:id="@+id/imageViewNose"
                         android:layout_weight="5"
-                        android:layout_marginTop="120dp"
+                        android:layout_marginTop="80dp"
 
-                        android:layout_gravity="top|center"
+                        android:layout_gravity="center_horizontal"
                         />
+
 
                     <ImageView
                         android:layout_width="wrap_content"
@@ -151,10 +152,10 @@
                         android:layout_height="wrap_content"
                         android:src="@drawable/mouth_1_ic_opened"
                         android:id="@+id/imageViewMouth"
-                        android:layout_marginBottom="20dp"
-                        android:layout_weight="5"
 
-                        android:layout_gravity="bottom|center"
+                        android:layout_weight="5"
+                        android:layout_marginTop="90dp"
+                        android:layout_gravity="center_horizontal"
                         />
                 </FrameLayout>
             </LinearLayout>
