--- a/app/src/main/res/layout/activity_finish.xml
+++ b/app/src/main/res/layout/activity_finish.xml
@@ -12,6 +12,24 @@
     style="@style/mainMenu"  android:background="#FFE9CE37"
     tools:context="br.com.lucasaquiles.cogg.FinishActivity">
 
+
+
+        <View android:id="@+id/emiter_top_left"
+            android:layout_gravity="center_horizontal"
+            android:layout_alignParentLeft="true"
+            android:layout_marginTop="-20dp"
+            android:layout_width="1dp"
+            android:layout_height="1dp" />
+
+        <View android:id="@+id/emiter_top_right"
+            android:layout_gravity="center_horizontal"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="-20dp"
+            android:layout_width="1dp"
+            android:layout_height="1dp" />
+
+
+
 <br.com.lucasaquiles.cogg.view.CustomButtton
     android:layout_width="wrap_content" android:id="@+id/back_button"
     android:layout_height="wrap_content" android:text="voltar"
@@ -20,6 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+
         >
 
     <ImageView
