--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -14,9 +14,9 @@
         android:layout_marginLeft="20dp"
         android:id="@+id/absoluteLayout">
 
-        <Button
+        <br.com.lucasaquiles.cogg.view.CustomButtton
             android:layout_width="wrap_content" android:gravity="left" android:textColor="#ffe3cc55" android:id="@+id/back_button"
-            android:layout_height="wrap_content"  android:background="@drawable/buttons_07"
+            android:layout_height="wrap_content"  android:text="Voltar"
             />
     </RelativeLayout>
 
@@ -175,11 +175,10 @@
                         android:src="@drawable/nose_1_ic_opened"
                         android:id="@+id/imageViewNose"
                         android:layout_weight="5"
-                        android:layout_marginTop="20dp"
+                        android:layout_marginTop="110dp"
 
-                        android:layout_gravity="center"
+                        android:layout_gravity="center_horizontal"
                         />
-
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -198,8 +197,8 @@
                         android:id="@+id/imageViewMouth"
 
                         android:layout_weight="5"
-                        android:layout_marginTop="35dp"
-                        android:layout_gravity="center"
+                        android:layout_marginTop="120dp"
+                        android:layout_gravity="center_horizontal"
                         />
 
                     <ImageView
