--- a/app/src/main/res/layout-sw600dp/activity_play.xml
+++ b/app/src/main/res/layout-sw600dp/activity_play.xml
@@ -14,9 +14,9 @@
        android:layout_marginLeft="20dp"
        android:id="@+id/absoluteLayout">
 
-       <Button
+       <ImageButton
            android:layout_width="wrap_content" android:gravity="left" android:textColor="#ffe3cc55" android:id="@+id/back_button"
-           android:layout_height="wrap_content"  android:background="@drawable/buttons_07"
+           android:layout_height="wrap_content"  android:src="@drawable/arrow_back" android:background="@null"
            />
    </RelativeLayout>
 
