--- a/app/src/main/res/layout-sw480dp/activity_play.xml
+++ b/app/src/main/res/layout-sw480dp/activity_play.xml
@@ -109,7 +109,7 @@
                         android:layout_weight="5"
                         android:layout_marginTop="5dp"
                         android:scaleType="fitCenter"
-
+android:tag="head_1_ic_opened"
                         android:layout_centerHorizontal="true" />
 
 
@@ -120,7 +120,7 @@
                         android:id="@+id/imageViewEye"
                         android:layout_weight="5"
                         android:layout_marginTop="50dp"
-
+                        android:tag="eye_3_ic_opened"
                         android:layout_gravity="top|center"
                         />
 
@@ -132,7 +132,7 @@
                         android:id="@+id/imageViewNose"
                         android:layout_weight="5"
                         android:layout_marginTop="80dp"
-
+                        android:tag="nose_1_ic_opened"
                         android:layout_gravity="center_horizontal"
                         />
 
@@ -144,7 +144,7 @@
                         android:id="@+id/imageViewEyewbrow"
                         android:layout_weight="5"
                         android:layout_marginTop="35dp"
-
+                        android:tag="eyebrow_1_ic_opened"
                         android:layout_gravity="top|center"
                         />
 
@@ -153,7 +153,7 @@
                         android:layout_height="wrap_content"
                         android:src="@drawable/mouth_1_ic_opened"
                         android:id="@+id/imageViewMouth"
-
+                        android:tag="mouth_1_ic_opened"
                         android:layout_weight="5"
                         android:layout_marginTop="90dp"
                         android:layout_gravity="center_horizontal"
