--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -151,7 +151,7 @@
                         android:layout_height="wrap_content"
                         android:src="@drawable/head_1_ic_opened"
                         android:id="@+id/imageViewHead"
-
+                        android:tag="head_1_ic_opened"
                         android:layout_gravity="center_horizontal|center_vertical"
                         />
 
@@ -163,7 +163,7 @@
                         android:id="@+id/imageViewEye"
                         android:layout_weight="5"
                         android:layout_marginTop="88dp"
-
+                        android:tag="eye_3_ic_opened"
                         android:layout_gravity="top|center"
                         />
 
@@ -175,7 +175,7 @@
                         android:id="@+id/imageViewNose"
                         android:layout_weight="5"
                         android:layout_marginTop="110dp"
-
+                        android:tag="nose_1_ic_opened"
                         android:layout_gravity="center_horizontal"
                         />
                     <ImageView
@@ -185,7 +185,7 @@
                         android:id="@+id/imageViewEyewbrow"
                         android:layout_weight="5"
                         android:layout_marginTop="70dp"
-
+                        android:tag="eyebrow_1_ic_opened"
                         android:layout_gravity="top|center_horizontal"
                         />
 
@@ -194,7 +194,7 @@
                         android:layout_height="wrap_content"
                         android:src="@drawable/mouth_1_ic_opened"
                         android:id="@+id/imageViewMouth"
-
+                        android:tag="mouth_1_ic_opened"
                         android:layout_weight="5"
                         android:layout_marginTop="120dp"
                         android:layout_gravity="center_horizontal"
@@ -206,7 +206,7 @@
                         android:src="@drawable/hair_4_ic_opened"
                         android:id="@+id/imageViewHair"
                         android:layout_marginTop="20dp"
-
+                        android:tag="hair_4_ic_opened"
                         android:layout_gravity="center_horizontal" />
 
                 </FrameLayout>
