--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -110,7 +110,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="(%) diferença"
+        android:text="Acertos:"
         android:textColor="#111"
         android:textSize="25sp"
         android:textStyle="bold"
